# BitChord

./: .gitattributes  .gitignore  README.md  pyproject.toml  test.py
bitchord/: __init__.py
bitchord/core/: __init__.py  context.py  llm.py  nodes.py  tool.py
bitchord/executors/: __init__.py  chain_executors.py  graph_executors.py
bitchord/llms/: __init__.py  fallback_llm.py  local_llms.py
bitchord/llms/models/: LFM2-VL-1.6B-Q4_0.gguf
